Enhancement: Complete project-feature component Fix alignment Re #435

--- a/app/styles/components/_project-features.scss
+++ b/app/styles/components/_project-features.scss
@@ -1,50 +1,108 @@
 .project-features {
-	@include grid-base;
+	@include offset-base-padding;
 	@include offset-content-bottom;
 	@include offset-content-top;
 	@include customer-colors;
 
 	overflow: hidden;
 
-	&__text {
+	&__title {
+		h2 {
+			margin-bottom: 1rem;
+
+			@include media-medium-min {
+				padding-left: 8.3%;
+			}
+
+			@include media-large-min {
+				padding-left: 1.6rem;
+			}
+		}
+
+		@include media-large-min {
+			margin-left: 50%;
+		}
+	}
+}
+
+.project-features-item {
+	@include customer-colors;
+	display: grid;
+	grid-column-gap: 1.6rem;
+	grid-template-columns: repeat(4, 1fr);
+
+	@include media-medium-min {
+		grid-template-columns: repeat(12, 1fr);
+	}
+
+	@include media-large-min {
+		grid-column-gap: 3.2rem;
+	}
+
+	&__navigation-link {
 		grid-column: 1 / span 4;
+		grid-row: 1 / 1;
+		text-decoration: none;
+
+		&:focus,
+		&:hover {
+			color: inherit;
+		}
 
 		@include media-medium-min {
-			grid-column: 2 / -2;
+			grid-column: 2 / 12;
+		}
+
+		@include media-large-min {
+			grid-column: 7 / 12;
+			grid-row: 1 / span 1;
+			align-self: end;
 		}
 	}
 
-	.project-features-item {
-		&__navigation-link {
-			position: relative;
-			display: block;
+	&__content {
+		//height: 0;
+		//overflow: hidden;
+		grid-column: 1 / span 4;
+		grid-row: 3 / 3;
+
+		@include media-medium-min {
+			grid-column: 2 / 12;
+		}
+
+		@include media-large-min {
+			grid-column: 7 / 12;
+			grid-row: 2 / span 1;
+		}
+	}
+
+	&__video {
+		//height: 0;
+		//overflow: hidden;
+		grid-column: 1 / span 4;
+		grid-row: 2 / 2;
+
+		img {
 			width: 100%;
-			//overflow: hidden;
-			text-decoration: none;
-
-			&:focus,
-			&:hover {
-				color: inherit;
-			}
+			height: auto;
 		}
 
-		&__title {
-			//position: absolute;
-			display: block;
-			transition: color 0.5s;
+		@include media-medium-min {
+			grid-column: 2 / 12;
 		}
 
-		&__content {
-			height: 0;
-			overflow: hidden;
-			color: $color-text;
-			transition: height 1s;
+		@include media-large-min {
+			grid-column: 2 / 7;
+			grid-row: 1 / span 2;
+			align-self: center;
 		}
+	}
 
-		&--active {
-			.project-features-item__content {
-				height: auto;
-			}
+	&--active {
+		.project-features-item__content
+		.project-features-item__video {
+			height: auto;
+			overflow: auto;
 		}
 	}
 }
